4) Import bodové vrstvy ORP

--- a/index_geoJSON.html
+++ b/index_geoJSON.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="leaflet.css" />
     <script src="leaflet.js"></script>
     <script src="leaflet_geoJSON.js"></script>
+    <script src="ORP_bodyJSON.js"></script>
 
     <!--Přidání JS knihovny z lokálního souboru - je nutné mít soubor ve stejném adresáři s html kódem-->
     <!--Po přidání knihovny lokálně se zpřístupní našeptávání funkcí knihovny D3-->
